# teleop_robot_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/tcp_pkg/lib/tcp_pkg/: tcpclient
install/tcp_pkg/share/ament_index/resource_index/package_run_dependencies/: tcp_pkg
install/tcp_pkg/share/ament_index/resource_index/parent_prefix_path/: tcp_pkg
install/tcp_pkg/share/tcp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tcp_pkg/share/tcp_pkg/cmake/: tcp_pkgConfig-version.cmake  tcp_pkgConfig.cmake
install/tcp_pkg/share/tcp_pkg/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build  latest_list
media/: 20230826_launch test
sample code/: holeType  holeType.cpp  holeType.h
src/MasterMACS_pkg/include/: EtherCAT_config.mc  EtherCAT_config.mh  EtherCAT_config_homing.mc  EtherCAT_config_homing.mh  EtherCAT_definition.mh  EtherCAT_definition_homing.mh  TCP_config.mc  TCP_config.mh  TCP_definition.mh  user_definition.mh
src/MasterMACS_pkg/include/SDK/Amplifier/: SDK_Amplifier_Epos4.mc  SDK_Amplifier_MACS.mh  SDK_Amplifier_MiniMACS6_DS402_Slave.mh  SDK_Amplifier_MotorAlignment.mc  SDK_Amplifier_MotorCommissioning.mh
src/MasterMACS_pkg/include/SDK/Axis/: SDK_Axis_Setup.mc
src/MasterMACS_pkg/include/SDK/Encoder/: SDK_Encoder_Setup.mc  SDK_SignalGenerator.mh
src/MasterMACS_pkg/include/SDK/Information/: SDK_Information_General.mc  SDK_Information_General.mh
src/MasterMACS_pkg/include/SDK/Kinematics/: SDK_Kinematics_Setup.mc
src/MasterMACS_pkg/include/SDK/Miscellaneous/: SDK_Miscellaneous_Recording.mh
src/MasterMACS_pkg/include/SDK/Motion/: SDK_Motion_Movement.mc
src/MasterMACS_pkg/include/SDK/VirtualModule/: SDK_VirtualModule_AxisSetup.mc  SDK_VirtualModule_AxisSetup.mh  SDK_VirtualModule_MasterSetup.mc
src/MasterMACS_pkg/include/maxon___Zub_MasterMACS_최신_펌웨어_전달(맥슨모터코리아)/: mastermacs_32ax_zub_9_5_00_Alpha3.m0
src/MasterMACS_pkg/sample code/: Ethernet_Sample_KIST.mc  Monitor_MotorControl_MaxonECi40_1ax.zbm
src/MasterMACS_pkg/sample code/EtherCAT_test_code/: main.mc
src/MasterMACS_pkg/sample code/EtherCAT_test_code/include/: EtherCAT_config.mc  EtherCAT_definition.mh
src/MasterMACS_pkg/sample code/EtherCAT_test_code/include/SDK/: SDK_ApossC.mc  Version.txt
src/MasterMACS_pkg/sample code/Ethernet_TCP_code/: ethernet_client_test_long.cpp  ethernet_server_test.cpp  ethernet_server_test_long.cpp  tcp_client.cpp  tcp_server.cpp
src/MasterMACS_pkg/sample code/maxon___Zub_MasterMACS_샘플_코드_자료(맥슨모터코리아)/: ECAT_3Ax_EPOS4-Test_csp(etherCAT Update).mc  ECAT_5Ax_EPOS4_csp_STATEMACHINE.mc  ECAT_6Ax_EPOS4_csp_STATEMACHINE.mc  Ethernet_Sample_1.mc  Orbital_Test.mc  RS232C_Sample.mc  Sample.mc
src/MasterMACS_pkg/src/: ethercat_epos4_csv_axis1_statemachine_20230130.mc  ethernet_client_20230127.mc  homing_vServer.mc  main_vClient.mc  main_vServer.mc  test.mc
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: LoadcellState.msg  MotorCommand.msg  MotorCommandCSV.msg  MotorState.msg
src/install/: local_setup.sh  setup.sh
src/install/tcp_pkg/lib/tcp_pkg/: tcpclient
src/install/tcp_pkg/share/tcp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/tcp_pkg/share/tcp_pkg/cmake/: tcp_pkgConfig-version.cmake  tcp_pkgConfig.cmake
src/install/teleop_twist_joy/share/teleop_twist_joy/: package.bash  package.zsh
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: MotorState.msg
src/interfaces_pkg/: CMakeLists.txt  package.xml
src/interfaces_pkg/msg/: MotorState.msg
src/launch_pkg/: CMakeLists.txt  launch_teleop_robot.py  package.xml
src/launch_pkg/launch/: demo_teleop_robot.launch.py  homing.launch.py  rviz_env.rviz  teleop_robot.launch.py
src/launch_pkg/param/: teleop_robot_config.yaml
src/loadcell_pkg/: package.xml  setup.cfg  setup.py
src/loadcell_pkg/launch/: _launch.py
src/loadcell_pkg/loadcell_pkg/: loadcell_read.py
src/log/: latest_build
src/robot_control_pkg/: CMakeLists.txt  package.xml
src/surgical_robot_control/: CMakeLists.txt  package.xml
src/surgical_robot_control/include/surgical_robot_control/: holeType.h  hw_definition.hpp  kinematics_control_node.hpp  surgical_tool.hpp  tf2_broadcaster.hpp  tf2_joint_state_publisher.hpp  tf2_listener.hpp  tf2_static_broadcaster.hpp
src/surgical_robot_control/launch/: _launch.py  homing.launch.py  homing.launch.py.py
src/surgical_robot_control/meshes/: continuum_segment.STL  continuum_segment_Blender_zero.dae  continuum_segment_Blender_zero_lightgreen.dae  continuum_segment_Blender_zero_violet.dae  continuum_segment_lightgreen.blend  continuum_segment_violet.blend1
src/surgical_robot_control/param/: robot_state_publisher_pkg_param.yaml
src/surgical_robot_control/rviz/: rviz_env.rviz  rviz_env_2.rviz  rviz_env_left.rviz  rviz_env_right.rviz
src/surgical_robot_control/src/: holeType2  holeType2.cpp  homing_node.cpp  kinematics_control_node.cpp  kinematics_function.cpp  main.cpp  surgical_tool.cpp  tf2_broadcaster.cpp  tf2_joint_state_publisher.cpp  tf2_listener.cpp  tf2_static_broadcaster.cpp
src/surgical_robot_control/urdf/: colors.urdf.xacro  surgical_robot.gv  surgical_robot_control.gv  surgical_tool.urdf  surgical_tool.urdf.xacro  surgical_tool_extend.urdf.xacro  surgical_tool_left.urdf.xacro  surgical_tool_right.urdf.xacro  surgical_tool_v1.urdf  test.urdf
src/tcp_pkg/: CMakeLists.txt  package.xml
src/tcp_pkg/include/tcp_pkg/: tcp_node.hpp  tcp_node_nonros.hpp
src/tcp_pkg/launch/: _launch.py  demo.launch.py
src/tcp_pkg/src/: demo_node.cpp  main.cpp  main_nonros.cpp  tcp_node.cpp  tcp_node_nonros.cpp
src/test_pkg/: CMakeLists.txt  package.xml
src/test_pkg/launch/: _launch.py
src/test_pkg/src/: main  main.cpp
src/tf2_pkg/: CMakeLists.txt  package.xml
src/tf2_pkg/include/tf2_pkg/: broadcaster.hpp  static_broadcaster.hpp
src/tf2_pkg/src/: broadcaster.cpp  listener.cpp  static_broadcaster.cpp
(+23 files in other folders)
