<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>surgical_robot_control</name>
  <version>0.0.0</version>
  <description>Surgical tool control package</description>
  <maintainer email="bigyun9375@gmail.com">bigyun</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>custom_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_action</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publihser</exec_depend>
  <exec_depend>joint_state_publihser_gui</exec_depend>
  <exec_depend>urdf</exec_depend>
  <!-- <depend>robot_state_publisher</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
